# my-workflows

./: .gitignore  AGENTS.md  README.md  config.example.yaml  pyproject.toml
.data/: rss_embeddings.sqlite3
.github/workflows/: tests.yml
docs/: daily-news-blog-digest-flow.md  docstring_style.md  rss_pipeline_spec.md
flows/: __init__.py  common.py  daily_news_blog_digest_flow.py  fetch_summarize_url_flow.py  hello_flow.py  rss_ingest_flow.py
tests/: test_daily_news_blog_digest_flow.py  test_fetch_summarize_url_flow.py  test_rss_ingest_flow.py
